--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
 }
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
@@ -10,8 +11,8 @@ android {
         applicationId "org.sjhstudio.diary"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 17
-        versionName "1.4.5"
+        versionCode 21
+        versionName "1.5"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -93,4 +94,9 @@ dependencies {
     }
 
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
