--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,10 @@ android {
 
     defaultConfig {
         applicationId "org.sjhstudio.diary"
-        minSdkVersion 16
+        minSdkVersion 22
         targetSdkVersion 31
-        versionCode 22
-        versionName "1.5.2"
+        versionCode 23
+        versionName "1.5.3"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -56,9 +56,9 @@ configurations {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'org.jetbrains:annotations:15.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -69,7 +69,7 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.github.PedroSG94:AutoPermissions:1.0.3'
 
-    implementation 'com.android.volley:volley:1.2.0'
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.stanfy:gson-xml-java:0.1.7'
 
@@ -84,7 +84,7 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
-    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.android.gms:play-services-auth:20.0.1'
     implementation 'com.google.http-client:google-http-client-gson:1.39.2'
     implementation ('com.google.api-client:google-api-client-android:1.32.1') {
         exclude group: 'org.apache.httpcomponents'
@@ -94,9 +94,10 @@ dependencies {
     }
 
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation "androidx.core:core-ktx:+"
+    implementation "androidx.core:core-ktx:1.7.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
 repositories {
     mavenCentral()
 }
