--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="org.sjhstudio.diary">
 
-    <!-- 위험 권한 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -26,6 +25,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DiaryProject"
         android:usesCleartextTraffic="true"
+        android:largeHeap="true"
         tools:replace="android:allowBackup">
 
         <activity android:name=".MainPasswordActivity"
@@ -122,5 +122,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/external" /> <!-- 내용 제공자 (카메라 앱과 파일 공유) -->
         </provider>
+
     </application>
+
 </manifest>
