--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <!-- 구글 드라이브 API 관련 -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> <!-- 구글 드라이브 API 관련 -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
         android:name=".helper.MyApplication"
@@ -22,38 +22,40 @@
         android:fullBackupContent="false"
         android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DiaryProject"
         android:usesCleartextTraffic="true"
-        android:largeHeap="true"
         tools:replace="android:allowBackup">
-
-        <activity android:name=".MainPasswordActivity"
+        <activity
+            android:name=".PasswordSettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainPasswordActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".PasswordActivity"
+        <activity
+            android:name=".PasswordActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".BackupActivity"
+        <activity
+            android:name=".BackupActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".DetailActivity"
+        <activity
+            android:name=".DetailActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".PhotoActivity"
+        <activity
+            android:name=".PhotoActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".DarkModeActivity"
+        <activity
+            android:name=".DarkModeActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
         <!--
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
@@ -85,11 +87,12 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".AlarmActivity"
+        <activity
+            android:name=".AlarmActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".SplashActivity"
+        <activity
+            android:name=".SplashActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -98,23 +101,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".FontActivity"
+        <activity
+            android:name=".FontActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".MainActivity"
-            android:windowSoftInputMode="adjustResize"
             android:exported="false"
-            android:screenOrientation="portrait" />
-
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:screenOrientation="portrait"
             android:exported="false"
+            android:screenOrientation="portrait"
             android:theme="@style/Base.Theme.AppCompat" /> <!-- 크롭 액티비티 -->
-
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="org.sjhstudio.diary.fileprovider"
@@ -124,7 +124,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/external" /> <!-- 내용 제공자 (카메라 앱과 파일 공유) -->
         </provider>
-
     </application>
 
 </manifest>
