ver.1.56 준비 - 폰트 추가 - 화면 회전 허용

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,33 +29,41 @@
         android:theme="@style/Theme.DiaryProject"
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
+
         <activity
             android:name=".PasswordSettingsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:configChanges="orientation|screenSize" />
+
         <activity
             android:name=".MainPasswordActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:configChanges="orientation|screenSize" />
+
         <activity
             android:name=".PasswordActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:configChanges="orientation|screenSize" />
+
         <activity
             android:name=".BackupActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:configChanges="orientation|screenSize" />
+
         <activity
             android:name=".DetailActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:configChanges="orientation|screenSize" />
+
         <activity
             android:name=".PhotoActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:configChanges="orientation|screenSize" />
+
         <activity
             android:name=".DarkModeActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:configChanges="orientation|screenSize" />
         <!--
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
@@ -90,31 +98,39 @@
         <activity
             android:name=".AlarmActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:configChanges="orientation|screenSize" />
+
         <activity
             android:name=".SplashActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".FontActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+
+        <!-- android:windowSoftInputMode="adjustResize" -->
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustResize"
+            android:configChanges="orientation|screenSize" />
+
+        <!-- 크롭 액티비티 -->
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:theme="@style/Base.Theme.AppCompat" /> <!-- 크롭 액티비티 -->
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/Base.Theme.AppCompat" />
+
+        <!-- 내용 제공자(카메라 앱과 파일 공유) -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="org.sjhstudio.diary.fileprovider"
@@ -122,8 +138,9 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/external" /> <!-- 내용 제공자 (카메라 앱과 파일 공유) -->
+                android:resource="@xml/external" />
         </provider>
+
     </application>
 
 </manifest>
