ver.1.5.6 준비 - 사진상세페이지 오류수정, 테스트중 (메모리누수문제 -> 라이브러리 대체)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
