--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     implementation 'com.stanfy:gson-xml-java:0.1.7'
 
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+//    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
@@ -90,6 +90,8 @@ dependencies {
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.biometric:biometric:1.1.0'
+
+    implementation 'com.github.CanHub:Android-Image-Cropper:4.2.1'
 }
 
 repositories {
