--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,12 +64,7 @@
             android:name=".DarkModeActivity"
             android:exported="false"
             android:configChanges="orientation|screenSize" />
-        <!--
-        <meta-data
-            android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713">
-        </meta-data>
-        -->
+
         <receiver
             android:name=".helper.AlarmReceiver"
             android:enabled="true"
@@ -116,7 +111,6 @@
             android:exported="false"
             android:configChanges="keyboardHidden|orientation|screenSize" />
 
-        <!-- android:windowSoftInputMode="adjustResize" -->
         <activity
             android:name=".MainActivity"
             android:exported="false"
@@ -124,11 +118,10 @@
             android:configChanges="orientation|screenSize" />
 
         <!-- 크롭 액티비티 -->
-<!--        <activity-->
-<!--            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"-->
-<!--            android:exported="false"-->
-<!--            android:configChanges="orientation|screenSize"-->
-<!--            android:theme="@style/Base.Theme.AppCompat" />-->
+        <activity android:name="com.canhub.cropper.CropImageActivity"
+            android:exported="true"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/Base.Theme.AppCompat"/>
 
         <!-- 내용 제공자(카메라 앱과 파일 공유) -->
         <provider
