--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "org.sjhstudio.diary"
         minSdkVersion 22
         targetSdkVersion 31
-        versionCode 26
-        versionName "1.5.5"
+        versionCode 27
+        versionName "1.6"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -71,9 +71,6 @@ dependencies {
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
-    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
-    implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
-
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
@@ -92,6 +89,10 @@ dependencies {
 
     // Crop image
     implementation 'com.github.CanHub:Android-Image-Cropper:4.2.1'
+
+    // Detail image view
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'  // before
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'    // after
 }
 
 repositories {
