--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "org.sjhstudio.diary"
         minSdkVersion 22
         targetSdkVersion 31
-        versionCode 27
-        versionName "1.6"
+        versionCode 28
+        versionName "1.6.1"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -49,31 +49,29 @@ configurations {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'org.jetbrains:annotations:15.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'lib.kingja.switchbutton:switchbutton:1.1.8'
+//    implementation 'lib.kingja.switchbutton:switchbutton:1.1.8'
     implementation 'com.github.channguyen:rsv:1.0.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.github.PedroSG94:AutoPermissions:1.0.3'
 
+    // Volley
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.stanfy:gson-xml-java:0.1.7'
 
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-
-    implementation 'com.google.android.gms:play-services-auth:20.1.0'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
     implementation 'com.google.http-client:google-http-client-gson:1.39.2'
     implementation ('com.google.api-client:google-api-client-android:1.32.1') {
         exclude group: 'org.apache.httpcomponents'
@@ -84,8 +82,9 @@ dependencies {
 
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation "androidx.core:core-ktx:1.7.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.biometric:biometric:1.1.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     // Crop image
     implementation 'com.github.CanHub:Android-Image-Cropper:4.2.1'
