2022-05-20 v1.6.1 준비 - CalendarFragment-> WriteFragment-> CalendarFragment시 데이터처리 - 버그 수정 - 일기 3줄 보기 = 선택사항

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,11 @@
         android:theme="@style/Theme.DiaryProject"
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
+
+        <meta-data
+            android:name="com.naver.maps.map.CLIENT_ID"
+            android:value="@string/naver_map_client_id" />
+
         <activity
             android:name=".SettingsActivity"
             android:exported="false" />
