--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-parcelize'
 }
 apply plugin: 'kotlin-android'
 
@@ -66,8 +67,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.stanfy:gson-xml-java:0.1.7'
 
+    // Naver map sdk
+    implementation 'com.naver.maps:map-sdk:3.14.0'
+
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
