--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,12 +18,12 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     packagingOptions {
         resources {
             excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/INDEX.LIST', 'META-INF/notice.txt', 'META-INF/ASL2.0']
         }
     }
-
 
     buildTypes {
         release {
@@ -31,15 +31,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     lint {
         abortOnError false
         checkReleaseBuilds false
     }
 
+    namespace 'org.sjhstudio.diary'
 }
 
 configurations {
@@ -49,45 +52,43 @@ configurations {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'org.jetbrains:annotations:15.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-//    implementation 'lib.kingja.switchbutton:switchbutton:1.1.8'
-    implementation 'com.github.channguyen:rsv:1.0.1'
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-    implementation 'com.github.PedroSG94:AutoPermissions:1.0.3'
-
-    // Volley
-    implementation 'com.android.volley:volley:1.2.1'
-    implementation 'com.google.code.gson:gson:2.8.9'
-    implementation 'com.stanfy:gson-xml-java:0.1.7'
-
-    // Naver map sdk
-    implementation 'com.naver.maps:map-sdk:3.14.0'
-
-    implementation 'androidx.exifinterface:exifinterface:1.3.3'
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-    implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
-
-    implementation 'com.google.android.gms:play-services-auth:20.2.0'
-    implementation 'com.google.http-client:google-http-client-gson:1.39.2'
-    implementation ('com.google.api-client:google-api-client-android:1.32.1') {
-        exclude group: 'org.apache.httpcomponents'
-    }
-    implementation ('com.google.apis:google-api-services-drive:v3-rev136-1.25.0') {
-        exclude group: 'org.apache.httpcomponents'
-    }
-
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation "androidx.core:core-ktx:1.8.0"
     implementation 'androidx.biometric:biometric:1.1.0'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation 'androidx.exifinterface:exifinterface:1.3.5'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    testImplementation 'junit:junit:4.13.2'
+
+    // Volley
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.stanfy:gson-xml-java:0.1.7'
+
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+    implementation 'com.google.http-client:google-http-client-gson:1.39.2'
+    implementation('com.google.api-client:google-api-client-android:1.32.1') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    implementation('com.google.apis:google-api-services-drive:v3-rev136-1.25.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+
+    // Naver map sdk
+    implementation 'com.naver.maps:map-sdk:3.15.0'
+
+    implementation 'com.github.channguyen:rsv:1.0.1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.github.PedroSG94:AutoPermissions:1.0.3'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
     // Crop image
     implementation 'com.github.CanHub:Android-Image-Cropper:4.2.1'
