--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,13 @@ plugins {
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 34
+//    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "org.sjhstudio.diary"
-        minSdkVersion 23
-        targetSdkVersion 31
+        minSdkVersion 24
+        targetSdkVersion 34
         versionCode 30
         versionName "1.7.0"
         multiDexEnabled true
@@ -33,8 +33,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     lint {
@@ -68,10 +68,10 @@ dependencies {
 
     // Volley
     implementation 'com.android.volley:volley:1.2.1'
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.stanfy:gson-xml-java:0.1.7'
 
-    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+    implementation 'com.google.android.gms:play-services-auth:21.3.0'
     implementation 'com.google.http-client:google-http-client-gson:1.39.2'
     implementation('com.google.api-client:google-api-client-android:1.32.1') {
         exclude group: 'org.apache.httpcomponents'
@@ -81,12 +81,12 @@ dependencies {
     }
 
     // Naver map sdk
-    implementation 'com.naver.maps:map-sdk:3.15.0'
+    implementation 'com.naver.maps:map-sdk:3.20.0'
 
     implementation 'com.github.channguyen:rsv:1.0.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.github.PedroSG94:AutoPermissions:1.0.3'
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'com.github.bumptech.glide:glide:4.15.0'
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
